# APEIRON

./: .env.example  .gitignore  .prettierignore  .prettierrc.json  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements-emulation.txt  requirements.txt
backend/app/: __init__.py  config.py  database.py  events.py  logging_config.py  main.py  models.py  queue.py  schemas.py  security.py  storage.py  tasks.py  worker.py
backend/app/analyzer/: __init__.py  anti_detect.py  detectors.py  emulator.py  engine.py  ioc_extractor.py  memory.py  reporting.py  rule_generator.py  static_analysis.py  types.py
backend/app/api/: routes_iocs.py  routes_rules.py  routes_samples.py  routes_stats.py  routes_ws.py
backend/rules/: anti_vm.yar  packers.yar
backend/tests/: conftest.py  test_api.py  test_detectors.py  test_ioc_extractor.py  test_rule_generator.py  test_security.py  test_static_analysis.py
docs/: README.md  threat-model.md
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx  styles.css  theme.js  utils.js
frontend/src/api/: client.js
frontend/src/components/: ApiKeyModal.jsx  IOCExplorer.jsx  MemoryDumps.jsx  Overview.jsx  RulesViewer.jsx  SampleDetail.jsx  SampleList.jsx  StatsBar.jsx  Timeline.jsx  TraceStream.jsx  UploadPanel.jsx
frontend/src/hooks/: useWebSocket.js
